crates/solidity-v2/testing/snapshots/diagnostics_output/syntax/constructor_pure/generated/solc/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

[TypeError 1558] Error: Constructor must be payable or non-payable, but is "pure".
   ╭─[input.sol:8:5]
   │
 8 │     constructor() pure {}
   │     ──────────┬──────────  
   │               ╰──────────── Error occurred here.
───╯
